# rag-workspace

./: ..env.swp  .env.example  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
modules/: document_handler.py  mineru_extractor.py  multimedia_extractor.py  rag_core.py  voice_engine.py
services/agent/: main.py
services/frontend/: app.py
shared/config/: settings.py
